# run_record_archiver

./: .gitignore  README.md  config.yaml.template  pyproject.toml  requirements.txt  run_archiver.sh
documentation/: CORE_MODULES.md  DEPLOYMENT_GUIDE.md  EXIT_CODES.md  FILE_FORMATS.md  OPERATIONS_MANUAL.md  STATE_MANAGEMENT_GUIDE.md  TROUBLESHOOTING_GUIDE.md  clients_README.md  fhiclutils_README.md  persistence_README.md  services_README.md
lib/: conftoolp.py  notprovided
run_record_archiver/: __main__.py  base_stage.py  config.py  constants.py  decorators.py  enums.py  exceptions.py  importer.py  log_handler.py  migrator.py  orchestrator.py  reporter.py  utils.py
run_record_archiver/clients/: artdaq.py  carbon.py  ucondb.py
run_record_archiver/fhiclutils/: __init__.py  converters.py  utils.py  validator.py
run_record_archiver/persistence/: lock.py  state.py
run_record_archiver/services/: blob_creator.py  blob_validator.py  fcl_preparer.py  process_runner.py  reporting.py
tools/: requirements.txt
tools/artdaqdb-vs-ucondb/: compare_artdaqdb_ucondb.py  compare_artdaqdb_ucondb.sh  config_template.yaml
tools/lib/: __init__.py  comparison_utils.py
